# voronoi-life

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: dev_memo.md
docs/: continuous-area-ca.md  voronoi-life-spec.md
src/voronoi_life/: __init__.py  cli.py  geometry.py  output.py  points.py  render.py  rules.py  simulation.py  web_gui.py
tests/: test_geometry.py  test_points.py  test_rules.py  test_simulation.py  test_web_gui.py
